# jfa-go

./: .dockerignore  .gitignore  .goreleaser.yml  CONTRIBUTING.md  Dockerfile.local  LICENSE  Makefile  README.md  api-activities.go  api-announce-vars.go  api-backups.go  api-invites.go  api-jellyseerr.go  api-messages.go  api-ombi.go  api-profiles.go  api-userpage.go  api-users.go  api.go  args.go  auth.go  backups.go  config.go  customcontent.go  discord.go  email.go  email_test.go  exit.go  external.go  generic-d.go  go.mod  housekeeping-d.go  internal.go  jellyseerr-d.go  lang.go  log.go  main.go  matrix.go  matrix_crypto.go  matrix_nocrypto.go  (+20 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
common/: common.go  go.mod
css/: base.css  colors.js  dark.js  omnifin.css
desktop/: .gitignore  README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: go.mod
easyproxy/: go.mod
html/: 404.html  admin-list-search-row.txt  admin.html  crash.html  create-success.html  form.html  header.txt  invalidCode.html  login-modal.html  password-reset.html  setup.html  user.html
jellyseerr/: go.mod  jellyseerr.go  jellyseerr_test.go
linecache/: go.mod
logger/: go.mod
logmessages/: go.mod  logmessages.go
mail/: confirmation.mjml  created.mjml  deleted.mjml  expired.mjml  expiry-adjusted.mjml  expiry-reminder.mjml  invite-email.mjml  password-reset.mjml  template.mjml  user-expired.mjml  welcome.mjml
ombi/: go.mod  (+2 more)
(+127 files in other folders)
